2005-02-23  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* struct_list.man: Extended to cover the new functionality.

	* list.tests: Extended testsuite for the new functionality, see
	  below.
	
	* list.tcl: New functionality. Exchange of two elements of a list,
	  and handling of list permutations (first, next, all, foreach).
	  The code has been taken from the Wiki, page 11262. The swap code
	  by Richard Suchenwirth. The 'firstperm' code by Kevin Kenny. The
	  'nextperm' algorithm by Donal E. Knuth [*], as translated to Tcl
	  by Kevin Kenny. Generation of all permutations and looping over
	  them by myself, using code from the module 'control' as well.
	  -- [*] Detailed references in the documentation.

2004-10-05  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.7 ========================
	* 

2004-10-02  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* struct_tree.man: Added a bit more structure to the manpage,
	  added an example demonstrating the creation of nodes, added an
	  explicit statement that new nodes are created with the method
	  "insert".

2004-09-29  Andreas Kupries <andreask@activestate.com>

	* record.tcl:  Fixed [Tcllib SF Bug 1018733]. Corrected management
	* record.text: of _level, which was reset to the level 0 to early,
 	  and also was not decremented after a sub-record was completed.

	* record.tcl (Delete): Fixed [Tcllib SF Bug 1023973]. Do not count
	* record.test:         the id generator down. Added test case for this.

	* tree.tcl:        Fixed [Tcllib SF Bug 1034924]. Both tree and graph
	* struct_tree.man: depend on struct::list for some of their methods.
	* tree.test:       Now in the code, documented as well, testsuite
	* graph.tcl:       header code extended.
	* graph.man:
	* graph.test:

2004-09-23  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* skiplist.tcl: Fixed expr'essions without braces.
